homogenization to -sation

--- a/conclusion.tex
+++ b/conclusion.tex
@@ -5,7 +5,7 @@ This phenomenon is common in optics, but in homogeneous materials it is usually 
 
 The dispersion curves were also shown to become periodic with regard to the wavevector, which is a result of the Bloch's theorem; the chapter further introduced the concepts of isofrequency contours, Brillouin zones and high-symmetry points in the reciprocal space, and discussed the conditions under which the notions of group, phase and information velocity are applicable.
 
-Nowadays, perhaps more than ever earlier, it is important to maintain an outlook over the history of the rapid scientific development. A  historical review follows which traces back the origin of numerous concepts much earlier than the majority of metamaterial-related papers advertise. % The analysis of how atomic lattices should be treated as homogeneous media puzzled physicists over a century ago, and the synthesis of inhomogeneous structures with desired macroscopic \textit{homogenized} behaviour is not much younger than the microwave technology on its own.
+Nowadays, perhaps more than ever earlier, it is important to maintain an outlook over the history of the rapid scientific development. A  historical review follows which traces back the origin of numerous concepts much earlier than the majority of metamaterial-related papers advertise. % The analysis of how atomic lattices should be treated as homogeneous media puzzled physicists over a century ago, and the synthesis of inhomogeneous structures with desired macroscopic \textit{homogenised} behaviour is not much younger than the microwave technology on its own.
 The historical part promoted the author's view on the notions of \textit{artificial dielectrics} and \textit{negative-index media}, which appear to have developed independently, to be unified around the middle of twentieth century. In a similar manner, it was argued that the resulting paradigm of \textit{negative-index metamaterials} unified with the concept of \textit{photonic crystals} around the millennium. The process of unification always sheds new light on the physical interpretation and is beneficial for conceptual development of the field. The historical review became a basis for outlining the boundary between metamaterials and photonic crystals, which concluded the theoretical section.
 
 \paragraph{Methodological contributions}
@@ -40,9 +40,9 @@ The Results chapter presented an overview of the electromagnetic behaviour of te
 } 
 \item{Periodic gaps in the wires introduce the individual resonances with an electric dipole. Their spectra of effective parameters were described in detail, since they are typical also for resonances in other structures. Parametric scans through wire radius and cut distance were shown to have nontrivial effects on the resonant frequency. Our experimental data from cut-wire array on silicon substrate were compared to numerical model, and the difference was explained as an effect of asymmetry and losses in the real sample. 
 } 
-\item{The individual resonances with an electric dipole were compared to their counterparts with a magnetic dipole forming the fundamental resonance of split-ring resonators. The resonator with a single splitting in the ring is asymmetric, and it was demonstrated that  erroneous results for this structure are retrieved by any homogenization method that does not account for the asymmetry. The version with a symmetric splitting, however, can be homogenized to obtain negative permeability. Further, a combination of the double-split ring resonator with the wire array was shown to yield the negative index of refraction with compatible results between the s-parameters method a current-driven homogenization.
+\item{The individual resonances with an electric dipole were compared to their counterparts with a magnetic dipole forming the fundamental resonance of split-ring resonators. The resonator with a single splitting in the ring is asymmetric, and it was demonstrated that  erroneous results for this structure are retrieved by any homogenisation method that does not account for the asymmetry. The version with a symmetric splitting, however, can be homogenised to obtain negative permeability. Further, a combination of the double-split ring resonator with the wire array was shown to yield the negative index of refraction with compatible results between the s-parameters method a current-driven homogenisation.
 } 
-\item{On the contrary, the discrepancy between these two approaches to homogenization cannot be neglected when a central shunt conductor is added to a symmetric split-ring resonator. Then the electric type resonance becomes the fundamental one, and by continuous changes in the geometry one  can be tuned the electric and magnetic resonance frequencies. While it might be intuitively expected they would form a region of negative refractive index, the simulations have shown that the spatial dispersion causes the dispersion curves to bend into a concave shape. Detailed plots illustrated that the structure supports multiple modes at the same frequency. Consequently, the scattering-parameter method cannot determine the effective index of refraction.
+\item{On the contrary, the discrepancy between these two approaches to homogenisation cannot be neglected when a central shunt conductor is added to a symmetric split-ring resonator. Then the electric type resonance becomes the fundamental one, and by continuous changes in the geometry one  can be tuned the electric and magnetic resonance frequencies. While it might be intuitively expected they would form a region of negative refractive index, the simulations have shown that the spatial dispersion causes the dispersion curves to bend into a concave shape. Detailed plots illustrated that the structure supports multiple modes at the same frequency. Consequently, the scattering-parameter method cannot determine the effective index of refraction.
 } 
 \item{Dielectric spherical resonators were shown to exhibit individual resonances of Mie type, the first of which is analogous to the resonance in split-ring resonator. With the exactly defined dielectric model of the constituent dielectric, we could deduce minimum dissipative losses that can be achieved in an experiment and shown what impact they have on the resonance spectra. Further we accompanied the computed spectra with our experimental results, arguing that the substantial deviation between these arised from the inhomogeneity of the resonators in the sample. Taking the inhomogeneity into account yielded a reasonable match with the experiment. Extended sieving of the spheres improved the resonance deeper, but no negative permeability was reached.
 %		\add{Owing to the homogeneous broadening of the resonator resonance, caused by intrinsic losses of TiO$_{2}$, further sieving appears to lack any purpose. Not only this project broadens the numerous group of technically successful research projects pointed in utterly wrong direction, it also classifies into the lamentable subgroup of effort that could be entirely avoided if open and honest scientific discussion took place about the inherent problems. In this case, particularly, in all related papers it should be openly stated that the dielectric losses of TiO2 prevent building any applicable volume metamaterial, no matter how accurately the resonators are prepared.}
@@ -53,17 +53,17 @@ The Results chapter presented an overview of the electromagnetic behaviour of te
 } 
 \item{On the example of a metallic sheet with slits parallel to the magnetic field we shown the effect of extraordinary transmission. We argue that it is mediated by standing surface plasmons, whose frequency depends on the slit periodicity and is almost independent of their width. Further we demonstrated that with increasing the metal thickness, the extraordinary transmission down-tunes with accordance to the dispersion of slot-waveguide modes.
 } 
-\item{Finally, we shown that the extraordinary transmission mediates the propagation of waves also in fishnet metamaterials made of stacked perforated metallic sheets. Current-driven homogenization plots for three different fishnets were compared to the scattering-parameter method, revealing that the latter is hardly applicable to this kind of structures, due to strong near-field coupling between neighbouring cells. Fishnets also support additional waves carried by quadrupole resonances, which was also observed in terahertz spectra of samples manufactured in our laboratory. Nevertheless, the simulations predicted that under a careful choice of geometry and illumination, fishnets exhibit a band of negative refractive index. 
+\item{Finally, we shown that the extraordinary transmission mediates the propagation of waves also in fishnet metamaterials made of stacked perforated metallic sheets. Current-driven homogenisation plots for three different fishnets were compared to the scattering-parameter method, revealing that the latter is hardly applicable to this kind of structures, due to strong near-field coupling between neighbouring cells. Fishnets also support additional waves carried by quadrupole resonances, which was also observed in terahertz spectra of samples manufactured in our laboratory. Nevertheless, the simulations predicted that under a careful choice of geometry and illumination, fishnets exhibit a band of negative refractive index. 
 }
 \end{enumerate}
 There remain many topics that are related to the subject of the present thesis, which were not discussed here, such as other crystal families than the square/cubic one, possibly including also quasicrystals or disorder. Except for the fishnet samples, the discussion was restricted to structures sharing symmetries with the incoming fields; more general classes of structures would involve bianisotropy/chirality. Also the nonlinear response of all structures can be studied, but one has to be aware that the Bloch's theorem and most of the presented theory assume a strictly linear response. However, direct numerical simulations of these phenomena can be presumably  achieved with a relatively easy adaptation of the simulation scripts.
 
 Another particularly useful direction of research would consist in adding the support of gyrotropy into the MEEP library, i.e. non-hermitian form of the permittivity or permeability tensors which breaks the time-reversal symmetry. This would open wide research possibilities of linear metamaterial devices with pronounced non-reciprocal effects.
 
-\paragraph{Conclusions for metamaterial homogenization}
-Throughout the thesis, we encountered many structures that can be described by effective parameters corresponding to a virtual homogeneous medium with the same macroscopic behaviour, and we argued that our decision to view the structure as homogeneous may form a good criterion to define the notion of \textit{metamaterials}. However, different kinds of technical or conceptual difficulties arise during the homogenization.
+\paragraph{Conclusions for metamaterial homogenisation}
+Throughout the thesis, we encountered many structures that can be described by effective parameters corresponding to a virtual homogeneous medium with the same macroscopic behaviour, and we argued that our decision to view the structure as homogeneous may form a good criterion to define the notion of \textit{metamaterials}. However, different kinds of technical or conceptual difficulties arise during the homogenisation.
 
-The observation of a \textit{negative refraction} at the interface of air and a given structure does not imply that it has a \textit{negative effective index of refraction}, $\Neff'<0$, since this homogenized parameter may not be defined at all. Some form of anisotropy is more or less present in all periodic structures; very often it is strong enough to preclude the use of $\Neff'$. On page \pageref{indexofrefraction} we have argued that one exception is when the light propagates nearly parallel to an optical axis of the anisotropic medium -- this warrants assigning effective parameters to most metamaterials. The zero-width band gaps with a cusp in isofrequency contours present an exception from this exception, as suggested on page \pageref{diracpoint}. 
+The observation of a \textit{negative refraction} at the interface of air and a given structure does not imply that it has a \textit{negative effective index of refraction}, $\Neff'<0$, since this homogenised parameter may not be defined at all. Some form of anisotropy is more or less present in all periodic structures; very often it is strong enough to preclude the use of $\Neff'$. On page \pageref{indexofrefraction} we have argued that one exception is when the light propagates nearly parallel to an optical axis of the anisotropic medium -- this warrants assigning effective parameters to most metamaterials. The zero-width band gaps with a cusp in isofrequency contours present an exception from this exception, as suggested on page \pageref{diracpoint}. 
 
 Some metamaterials have such a strong spatial dispersion that their dispersion curves allow \textit{additional waves} sharing the same frequency and direction of propagation (Fig. \ref{fg_cdh2}a, \ref{fg_dcllactivity}), and this is another complication that precludes the description of the metamaterial by a single spectrum of $\Neff$. 
 
