--- a/intro.tex
+++ b/intro.tex
@@ -65,7 +65,7 @@ Defining numerically stable FDTD simulations with realistic materials, one encou
 
 The second part describes the setups of the "numerical experiments" that are built atop the algorithms. 
 The time-domain simulation is first used in conjunction with the scattering-parameter retrieval setup, which is based on transmitting a broadband pulse towards a metamaterial unit cell and recovering its effective parameters from the reflected and transmitted fields. While this setup is shown to give mostly realistic results, however, it has its limitations which are also presented. Although the scattering-parameter retrieval seems by far the most commonly used, different setups were described in the literature which are briefly noted.
-One of such simulation setups of the current-driven homogenization is presented in details, and it is shown that its weaker prior assumptions on the structure behaviour lead to higher reliability.
+One of such simulation setups of the current-driven homogenisation is presented in details, and it is shown that its weaker prior assumptions on the structure behaviour lead to higher reliability.
 % TODO one should really devise an algorithm for the Landau-Lifshitz permittivity retrieval from CDH (i.e. calibrate the source first on vacuum?)
 %}}}
 \paragraph{Results, conclusion and appendices} %{{{				%% TODO
