--- a/theory.tex
+++ b/theory.tex
@@ -1229,7 +1229,7 @@ The 1950s brought the first step towards achieving negative effective parameters
 
 In all cases of $\eeff(\omega)<1$, the effective refractive index $\Neff(\omega)$ was also lower than that of vacuum \cite{brown1953artificial}, but, as follows from
 \begin{equation} N(\omega) := k(\omega) \, \frac{c}{\omega} \equiv \sqrt{\epsrl(\omega)\murl(\omega)}, \tag{\ref{eq_dispeqN} \again} \end{equation}
-	it could not become negative, since the effective permeability $\meff'(\omega) > 0$ was still positive and its imaginary part $\meff''(\omega)$ was negligible. The unit cell size was kept much smaller than the wavelength, so the problem of \textit{homogenization}\index{homogenization} appeared as settled and the nonlocal effects apparently did not cause much concern.
+	it could not become negative, since the effective permeability $\meff'(\omega) > 0$ was still positive and its imaginary part $\meff''(\omega)$ was negligible. The unit cell size was kept much smaller than the wavelength, so the problem of \textit{homogenisation}\index{homogenisation} appeared as settled and the nonlocal effects apparently did not cause much concern.
 
 %}}}
 \paragraph{Negative effective permeability and negative refractive index}  %{{{ ================== 
@@ -1408,16 +1408,16 @@ or, in more words,
 In the author's view, such quotes represent brilliant observations of emergence in physics, but they cannot be used as a distinction between metamaterials and photonic crystals. In fact, they apply to both classes of structures.
 
 %}}}
-\paragraph{Metamaterials as all structures subject to homogenization} %{{{
+\paragraph{Metamaterials as all structures subject to homogenisation} %{{{
 The criteria of wavelength or energy localisation leave many structures on the indefinite boundary. The phase-advance criterion is rigorous, but of little practical use. There are other criteria proposed that appear to fail in some way. This leads the author to the personal view that the difference in one's decision on how each structure is characterized. 
 
-The unifying concept of virtually all MM studies is to describe \textit{how} the wave propagates though them. Their overwhelmingly complicated electromagnetic interaction is approximated by \textit{homogenization}\index{homogenization}, i.e. by finding such properties of a homogeneous medium that would behave in similar way.
+The unifying concept of virtually all MM studies is to describe \textit{how} the wave propagates though them. Their overwhelmingly complicated electromagnetic interaction is approximated by \textit{homogenisation}\index{homogenisation}, i.e. by finding such properties of a homogeneous medium that would behave in similar way.
 
 In contrast, the PhC research focuses on \textit{whether} the wave can propagate at all. When a mirror, filter, waveguide cladding or other structure with a band gap is designed, it is important to prevent or allow the light propagation rather than to achieve some desired effective parameters for the Bloch's wave. 
 
 This also justifies denoting MMs and PhCs as two different \textit{paradigms} rather than two distinct \textit{classes} of periodic structures, and it is the reason why the neutral term of \textit{periodic structure} is used in this thesis. 
 
-With this in mind, the author believes that there is no need for a strict rule for classification. Some structures are then more useful to be subject to homogenization, and with some other it is more interesting to focus on their band and band-gap structure. 
+With this in mind, the author believes that there is no need for a strict rule for classification. Some structures are then more useful to be subject to homogenisation, and with some other it is more interesting to focus on their band and band-gap structure. 
 %anything that is subject to homogenisation - i.e. a structure for which we can apply the Bloch's-Floquet theorem
 %and determine the K-vector.
 
