--- a/title.tex
+++ b/title.tex
@@ -52,7 +52,7 @@ Studijní obor:			&\textbf{Fyzikální inženýrství} \\
 					~	&Katedra fyzikální elektroniky\\
 Akademický rok:			&\textbf{2015/16} \\			%% TODO is this the correct format?
 Počet stran:			&\textbf{\pageref{enddocument}} \\  %% TODO shall give the overall page number or just that of the authored text?
-Klíčová slova			&\textbf{metamateriály, fotonické krystaly, terahertzová technologie, elektrodynamické simulace, homogenizace efektivních prostředí} \\
+Klíčová slova			&\textbf{metamateriály, fotonické krystaly, terahertzová technologie, elektrodynamické simulace, homogenisace efektivních prostředí} \\
 \end{tabular}
 \egroup
 
@@ -78,7 +78,7 @@ Supervisor specialist:	&\textbf{doc. Ing. Ivan Richter, Dr.} \\
 					~	&Department of Physical Electronics\\
 Academic Year:			&\textbf{2015/2016} \\
 Number of Pages:		&\textbf{\pageref{enddocument}} \\
-Keywords				&\textbf{metamaterials, photonic crystals, terahertz technology, computational electrodynamics, homogenization of effective media} \\
+Keywords				&\textbf{metamaterials, photonic crystals, terahertz technology, computational electrodynamics, homogenisation of effective media} \\
 \end{tabular}
 \egroup
 \thispagestyle{empty} \newpage  ~ \thispagestyle{empty} \newpage \setcounter{page}{1}
